--- a/index.html
+++ b/index.html
@@ -410,7 +410,45 @@
           </div>
         </div>
       </main>
-      <footer></footer>
+      <footer>
+        <div class="container-footer">
+          <section class="footer">
+            <div class="footer-title">
+              <h3 class="section-title">A propos</h3>
+            </div>
+            <div class="link-footer">
+              <div class="link">
+                <a href="#" class="link">Fonctionnement du site</a>
+                <a href="#" class="link">Conditions générales</a>
+                <a href="#" class="link">Fonctionnement du site</a>
+                <a href="#" class="link">Données et confidentialités</a>
+              </div>
+            </div>
+          </section>
+          <section class="footer">
+            <div class="footer-title">
+              <h3 class="section-title">Nos hébergements</h3>
+            </div>
+            <div class="link-footer">
+              <div class="link">
+                <a href="#" class="link">Charte qualité</a>
+                <a href="#" class="link">Proposer votre hôtel</a>
+              </div>
+            </div>
+          </section>
+           <section class="footer">
+            <div class="footer-title">
+              <h3 class="section-title">Assistance</h3>
+            </div>
+            <div class="link-footer">
+              <div class="link">
+                <a href="#" class="link">Centre d'aide</a>
+                <a href="#" class="link">Nous contacter</a>
+               
+              </div>
+            </div>
+          </section>
+      </footer>
     </div>
   </body>
 </html>
