--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             </div>
             <div class="filter">
               <div class="iconsfilter">
-                <i class="fas fa-dog"></i>
+                <i class="fas fa-fire"></i>
               </div>
-              <p>Animaux Autorisés</p>
+              <p>Nos pépites</p>
             </div>
           </article>
 
@@ -104,10 +104,8 @@
             <div class="hebergements-cartes">
               <a href="#">
                 <article class="carte">
-                  <img
-                    src="./images/hebergements/fred-kleber.jpg"
-                    alt="Image de la chambre montrant deux lits"
-                  />
+                  <img src="./images/hebergements/fred-kleber.jpg" 
+                  alt="Image de la chambre montrant deux lits" />
                   <div class="carte-content">
                     <div class="carte-txt">
                       <h3 class="carte-title">Hôtel du port</h3>
@@ -244,8 +242,8 @@
               </a>
               <a href="#">
                 <article class="carte">
-                  <img 
-                    src="./images/hebergements/nicate-lee.jpg" 
+                  <img
+                    src="./images/hebergements/nicate-lee.jpg"
                     alt="Image de la chambre montrant deux lits"
                   />
                   <div class="carte-content">
@@ -271,101 +269,74 @@
                 </article>
               </a>
             </div>
-            <a class="showmore" href="#">Afficher plus</a>
 
+            <a class="showmore" href="#">Afficher plus</a>
           </section>
           <section class="populaires">
             <div class="populaires-title">
-              <h2 class="section-title">Les plus populaires</h2>
-              <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
+                <h2 class="section-title">Les plus populaires</h2>
+                <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
             </div>
             <div class="populaires-cards">
-              <a href="#">
-                <article class="card">
-                  <img
-                    src="./images/hebergements/emile-guillemot.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
-                  <div class="card-content">
-                    <div class="card-txt">
-                      <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
-                      </p>
-                    </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
-                  </div>
-                </article>
-              </a>
-              <a href="#">
-                <article class="card">
-                  <img
-                    src="./images/hebergements/aw-creative.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
-                  <div class="card-content">
-                    <div class="card-txt">
-                      <h3 class="card-title">
-                        Chambres d’hôtes Au cœur de l’eau
-                      </h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 71<span class="euro">€</span>
-                      </p>
-                    </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
-                  </div>
-                </article>
-              </a>
-              <a href="#">
-                <article class="card">
-                  <img
-                    src="./images/hebergements/febrian-zakaria2.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
-                  <div class="card-content">
-                    <div class="card-txt">
-                      <h3 class="card-title">Hôtel Bleu et Blanc</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 68<span class="euro">€</span>
-                      </p>
-                    </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
-                  </div>
-                </article>
-              </a>
+                <a href="#">
+                    <article class="card">
+                        <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                                <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
+                            </div>
+                            <div class="card-rating">
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                <span class="sr-only">Note de 4 sur 5</span>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+                <a href="#">
+                    <article class="card">
+                        <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
+                                <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
+                            </div>
+                            <div class="card-rating">
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                <span class="sr-only">Note de 4 sur 5</span>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+                <a href="#">
+                    <article class="card">
+                        <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">Hôtel Bleu et Blanc</h3>
+                                <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
+                            </div>
+                            <div class="card-rating">
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                <span class="sr-only">Note de 4 sur 5</span>
+                            </div>
+                        </div>
+                    </article>
+                </a>
             </div>
-          </section>
-        </div>
+        </section>        </div>
         <div class="container-activites">
           <div class="activites-title">
             <h2 class="section-title">Activités à Marseille</h2>
@@ -412,42 +383,41 @@
       </main>
       <footer>
         <div class="container-footer">
-          <section class="footer">
+          <section class="elements-footer">
             <div class="footer-title">
               <h3 class="section-title">A propos</h3>
             </div>
-            <div class="link-footer">
+            <div class="footer-link">
               <div class="link">
                 <a href="#" class="link">Fonctionnement du site</a>
                 <a href="#" class="link">Conditions générales</a>
-                <a href="#" class="link">Fonctionnement du site</a>
                 <a href="#" class="link">Données et confidentialités</a>
               </div>
             </div>
           </section>
-          <section class="footer">
+          <section class="elements-footer">
             <div class="footer-title">
               <h3 class="section-title">Nos hébergements</h3>
             </div>
-            <div class="link-footer">
+            <div class="footer-link">
               <div class="link">
                 <a href="#" class="link">Charte qualité</a>
-                <a href="#" class="link">Proposer votre hôtel</a>
+                <a href="#" class="link">Soumettre votre hôtel</a>
               </div>
             </div>
           </section>
-           <section class="footer">
+          <section class="elements-footer">
             <div class="footer-title">
               <h3 class="section-title">Assistance</h3>
             </div>
-            <div class="link-footer">
+            <div class="footer-link">
               <div class="link">
                 <a href="#" class="link">Centre d'aide</a>
                 <a href="#" class="link">Nous contacter</a>
-               
               </div>
             </div>
           </section>
+        </div>
       </footer>
     </div>
   </body>
