Modification zone hébergements

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   alt="Image de la chambre montrant deux lits" />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title">Hôtel du port</h3>
+                      <h3 class="carte-title truncate">Hôtel du port</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 52<span class="euro">€</span>
                       </p>
@@ -136,7 +136,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title">Hôtel Chez Amina</h3>
+                      <h3 class="carte-title truncate">Hôtel Chez Amina</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 96<span class="euro">€</span>
                       </p>
@@ -164,7 +164,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title">Hôtels Les Mouettes</h3>
+                      <h3 class="carte-title truncate">Hôtels Les Mouettes</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 76<span class="euro">€</span>
                       </p>
@@ -184,6 +184,8 @@
                   </div>
                 </article>
               </a>
+            </div>
+            <div class="hebergements-cartes">
               <a href="#">
                 <article class="carte">
                   <img
@@ -192,7 +194,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title">Hotel de la mer</h3>
+                      <h3 class="carte-title truncate">Hotel de la mer</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 46<span class="euro">€</span>
                       </p>
@@ -220,7 +222,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title">Auberge de la cannebière</h3>
+                      <h3 class="carte-title truncate">Auberge la cannebière</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 25<span class="euro">€</span>
                       </p>
@@ -248,7 +250,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title">Auberge Le Panier</h3>
+                      <h3 class="carte-title truncate">Auberge Le Panier</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 23<span class="euro">€</span>
                       </p>
@@ -366,7 +368,7 @@
                 alt="image montrant la mer"
               />
               <div class="photo-txt">
-                <h3 class="photo-title">Parc national des calangues</h3>
+                <h3 class="photo-title">Parc national des calanques</h3>
               </div>
             </div>
             <div class="photo">
