ajout break point

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title truncate">Auberge la cannebière</h3>
+                      <h3 class="carte-title truncate">Auberge La cannebière</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 25<span class="euro">€</span>
                       </p>
