--- a/index.html
+++ b/index.html
@@ -60,39 +60,40 @@
             </form>
           </div>
 
-          <article class="filters-container">
-            <h2>Filtres</h2>
+          <div class="filters-container">
+            <h2 class="filters-title">Filtres</h2>
             <div class="filter">
-              <div class="iconsfilter">
-                <i class="fas fa-money-bill-wave"></i>
+              <div class="iconfilter">
+                <i class="fas fa-money-bill-wave "></i>
               </div>
-              <p>Économique</p>
+              <span class="filter-title">Économique</span>
             </div>
             <div class="filter">
-              <div class="iconsfilter">
-                <i class="fas fa-child"></i>
+              <div class="iconfilter">
+                <i class="fas fa-child "></i>
               </div>
-              <p>Familial</p>
+              <span class="filter-title">Familial</span>
             </div>
             <div class="filter">
-              <div class="iconsfilter">
+              <div class="iconfilter">
                 <i class="fas fa-heart"></i>
               </div>
-              <p>Romantique</p>
+              <span class="filter-title">Romantique</span>
             </div>
             <div class="filter">
-              <div class="iconsfilter">
-                <i class="fas fa-fire"></i>
+              <div class="iconfilter">
+                <i class="fas fa-fire "></i>
               </div>
-              <p>Nos pépites</p>
+              <span class="filter-title">Nos pépites</span>
             </div>
-          </article>
-
+          </div>
           <div class="info">
             <div class="iconinfo">
               <i class="fas fa-info"></i>
             </div>
-            <p>Plus de 500 logements sont disponibles dans cette ville</p>
+            <p class="info-text">
+              Plus de 500 logements sont disponibles dans cette ville
+            </p>
           </div>
         </section>
 
