--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@
         <div class="logo">
           <img src="./images/logo/Booki.png" alt="logo Booki" />
         </div>
-        <div>
-          <nav>
+        <nav class="menu">
             <ul>
               <li><a href="#Hebergement">Hébergement</a></li>
               <li><a href="#Activites">Activités</a></li>
             </ul>
-          </nav>
-        </div>
+        </nav>
       </header>
       <main>
         <section class="container">
@@ -62,29 +60,31 @@
 
           <div class="filters-container">
             <h2 class="filters-title">Filtres</h2>
-            <div class="filter">
-              <div class="iconfilter">
-                <i class="fas fa-money-bill-wave "></i>
+            <div class="filter-items">
+              <div class="filter">
+                <div class="iconfilter">
+                  <i class="fas fa-money-bill-wave "></i>
+                </div>
+                  <span class="filter-title">Économique</span>
               </div>
-              <span class="filter-title">Économique</span>
-            </div>
-            <div class="filter">
-              <div class="iconfilter">
-                <i class="fas fa-child "></i>
+              <div class="filter">
+                <div class="iconfilter">
+                  <i class="fas fa-child "></i>
+                </div>
+                <span class="filter-title">Familial</span>
+              </div>           
+              <div class="filter">
+                <div class="iconfilter">
+                  <i class="fas fa-heart"></i>
+                </div>
+                <span class="filter-title">Romantique</span>
               </div>
-              <span class="filter-title">Familial</span>
-            </div>
-            <div class="filter">
-              <div class="iconfilter">
-                <i class="fas fa-heart"></i>
+              <div class="filter">
+                <div class="iconfilter">
+                  <i class="fas fa-fire "></i>
+                </div>
+                <span class="filter-title">Nos pépites</span>
               </div>
-              <span class="filter-title">Romantique</span>
-            </div>
-            <div class="filter">
-              <div class="iconfilter">
-                <i class="fas fa-fire "></i>
-              </div>
-              <span class="filter-title">Nos pépites</span>
             </div>
           </div>
           <div class="info">
@@ -104,7 +104,7 @@
             </div>
             <div class="hebergements-cartes">
               <a href="#">
-                <article class="carte">
+                <div class="carte">
                   <img src="./images/hebergements/fred-kleber.jpg" 
                   alt="Image de la chambre montrant deux lits" />
                   <div class="carte-content">
@@ -127,10 +127,10 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <a href="#">
-                <article class="carte">
+                <div class="carte">
                   <img
                     src="./images/hebergements/febrian-zakaria.jpg"
                     alt="Image de la chambre montrant deux lits"
@@ -155,10 +155,10 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <a href="#">
-                <article class="carte">
+                <div class="carte">
                   <img
                     src="./images/hebergements/reisetopia.jpg"
                     alt="Image de la chambre montrant un grand lit"
@@ -183,12 +183,12 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
             </div>
             <div class="hebergements-cartes">
               <a href="#">
-                <article class="carte">
+                <div class="carte">
                   <img
                     src="./images/hebergements/annie-spratt.jpg"
                     alt="Image de la chambre montrant un grand lit"
@@ -213,10 +213,10 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <a href="#">
-                <article class="carte">
+                <div class="carte">
                   <img
                     src="./images/hebergements/marcus-loke.jpg"
                     alt="Image de la chambre montrant un lit "
@@ -241,10 +241,10 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <a href="#">
-                <article class="carte">
+                <div class="carte">
                   <img
                     src="./images/hebergements/nicate-lee.jpg"
                     alt="Image de la chambre montrant deux lits"
@@ -269,7 +269,7 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
             </div>
 
@@ -277,74 +277,75 @@
           </section>
           <section class="populaires">
             <div class="populaires-title">
-                <h2 class="section-title">Les plus populaires</h2>
-                <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
-            </div>
-            <div class="populaires-cards">
-                <a href="#">
-                    <article class="card">
-                        <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                                <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
-                            </div>
-                            <div class="card-rating">
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                <span class="sr-only">Note de 4 sur 5</span>
-                            </div>
-                        </div>
-                    </article>
-                </a>
-                <a href="#">
-                    <article class="card">
-                        <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
-                                <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
-                            </div>
-                            <div class="card-rating">
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                <span class="sr-only">Note de 4 sur 5</span>
-                            </div>
-                        </div>
-                    </article>
-                </a>
-                <a href="#">
-                    <article class="card">
-                        <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Hôtel Bleu et Blanc</h3>
-                                <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
-                            </div>
-                            <div class="card-rating">
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                <span class="sr-only">Note de 4 sur 5</span>
-                            </div>
-                        </div>
-                    </article>
-                </a>
-            </div>
+              <h2 class="section-title">Les plus populaires</h2>
+              <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
+          </div>
+          <div class="populaires-cards">
+              <a href="#">
+                  <article class="card">
+                      <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                      <div class="card-content">
+                          <div class="card-txt">
+                              <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                              <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
+                          </div>
+                          <div class="card-rating">
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                              <span class="sr-only">Note de 4 sur 5</span>
+                          </div>
+                      </div>
+                  </article>
+              </a>
+              <a href="#">
+                  <article class="card">
+                      <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                      <div class="card-content">
+                          <div class="card-txt">
+                              <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
+                              <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
+                          </div>
+                          <div class="card-rating">
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                              <span class="sr-only">Note de 4 sur 5</span>
+                          </div>
+                      </div>
+                  </article>
+              </a>
+              <a href="#">
+                  <article class="card">
+                      <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                      <div class="card-content">
+                          <div class="card-txt">
+                              <h3 class="card-title">Hôtel Bleu et Blanc</h3>
+                              <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
+                          </div>
+                          <div class="card-rating">
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                              <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                              <span class="sr-only">Note de 4 sur 5</span>
+                          </div>
+                      </div>
+                  </article>
+              </a>
+          </div>
+
         </section>        </div>
         <div class="container-activites">
           <div class="activites-title">
             <h2 class="section-title">Activités à Marseille</h2>
           </div>
-          <div class="photo-container">
+          <div class="activites-photos">
             <div class="photo">
               <img
                 src="./images/activites/reno-laithienne.jpg"
