Modification zone hébgerments à marseille et ajout medias queries

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title truncate">Hôtel du port</h3>
+                      <h3 class="carte-title ">Hôtel du port</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 52<span class="euro">€</span>
                       </p>
@@ -136,7 +136,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title truncate">Hôtel Chez Amina</h3>
+                      <h3 class="carte-title">Hôtel Chez Amina</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 96<span class="euro">€</span>
                       </p>
@@ -164,7 +164,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title truncate">Hôtels Les Mouettes </h3>
+                      <h3 class="carte-title ">Hôtels Les Mouettes </h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 76<span class="euro">€</span>
                       </p>
@@ -194,7 +194,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title truncate">Hotel de la mer</h3>
+                      <h3 class="carte-title ">Hotel de la mer</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 46<span class="euro">€</span>
                       </p>
@@ -222,7 +222,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title truncate">Auberge la cannebière</h3>
+                      <h3 class="carte-title ">Auberge la cannebière</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 25<span class="euro">€</span>
                       </p>
@@ -250,7 +250,7 @@
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title truncate">Auberge Le Panier</h3>
+                      <h3 class="carte-title ">Auberge Le Panier</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 23<span class="euro">€</span>
                       </p>
@@ -289,9 +289,7 @@
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -315,9 +313,7 @@
                   />
                   <div class="card-content">
                     <div class="card-txt">
-                      <h3 class="card-title">
-                        Chambres d’hôtes Au cœur de l’eau
-                      </h3>
+                      <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 71<span class="euro">€</span>
                       </p>
@@ -345,9 +341,7 @@
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Bleu et Blanc</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 68<span class="euro">€</span>
-                      </p>
+                      <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
                     </div>
                     <div class="card-rating">
                       <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -366,50 +360,63 @@
             </div>
           </section>
         </div>
-        <section class="activites">
+        <section class="activites-à-marseille">
           <div class="activites">
             <h2 class="section-title">Activités à Marseille</h2>
           </div>
           <div class="activites-photos">
-            <div class="photo">
-              <img
-                src="./images/activites/reno-laithienne.jpg"
-                alt="image montrant le port de marseille"
-              />
-              <div class="photo-conten">
-                <div class="photo-txt">
-                  <h3 class="photo-title ">Vieux Port</h3>
+            <a href="#">
+              <article class="photo">
+                <img
+                  src="./images/activites/reno-laithienne.jpg"
+                  alt="image montrant le port de marseille"
+                />
+                <div class="photo-content">
+                  <div class="photo-txt">
+                    <h3 class="photo-title ">Vieux Port</h3>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="photo">
-              <img
-                src="./images/activites/paul-hermann.jpg"
-                alt="image montrant une montagne de rocher"
-              />
-              <div class="photo-txt">
-                <h3 class="photo-title">Fort de Pomégues</h3>
-              </div>
-            </div>
-            <div class="photo">
-              <img
-                src="./images/activites/kilyan-sockalingum.jpg"
-                alt="image montrant la mer"
-              />
-              <div class="photo-txt">
-                <h3 class="photo-title">Parc national des calanques</h3>
-              </div>
-            </div>
-            <div class="photo">
-              <img
-                src="./images/activites/florian-wehde.jpg"
-                alt="image montrant une cathedrale"
-              />
-              <div class="photo-txt">
-                <h3 class="photo-title ">Notre Dame-de-la-Garde</h3>
-              </div>
-            </div>
-          </div>
+              </article>
+            </a>
+            <a href="#">
+              <article class="photo">
+                <img
+                  src="./images/activites/paul-hermann.jpg"
+                  alt="image montrant une montagne de rocher"
+                />
+                <div class="photo-content">
+                  <div class="photo-txt">
+                    <h3 class="photo-title">Fort de Pomégues</h3>
+                  </div>
+                </div>
+              </article>
+            </a>
+            <a class="#">
+              <article class="photo">
+                <img
+                  src="./images/activites/kilyan-sockalingum.jpg"
+                  alt="image montrant la mer"
+                />
+                <div class="photo-content">
+                  <div class="photo-txt">
+                    <h3 class="photo-title">Parc national des calangues</h3>
+                  </div>
+                </div>
+              </article>
+            </a>
+            <a class="#">
+              <article class="photo">
+                <img
+                  src="./images/activites/florian-wehde.jpg"
+                  alt="image montrant une cathedrale"
+                />
+                <div class="photo-content">
+                  <div class="photo-txt">
+                    <h3 class="photo-title">Notre Dame-de-la-Garde</h3>
+                  </div>
+                </div>
+              </article>
+            </a>
         </section>
       </main>
       <footer>
