Suite médias queries

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <nav class="menu">
           <ul>
-            <li><a href="#Hebergements">Hébergement</a></li>
+            <li><a href="#Hebergements">Hébergements</a></li>
             <li><a href="#Activites">Activités</a></li>
           </ul>
         </nav>
