Médias queries mobile

--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@
             </div>
           </section>
         </div>
-        <section class="activites-à-marseille">
+        <div class="activites-à-marseille">
           <div class="activites">
-            <h2 class="section-title">Activités à Marseille</h2>
+            <h2 class="activites-title">Activités à Marseille</h2>
           </div>
           <div class="activites-photos">
             <a href="#">
@@ -417,13 +417,13 @@
                 </div>
               </article>
             </a>
-        </section>
+          </div>
       </main>
       <footer>
         <div class="container-footer">
           <section class="elements-footer">
             <div class="footer-title">
-              <h3 class="section-title">A propos</h3>
+              <h3 class="title">A propos</h3>
             </div>
             <div class="footer-link">
               <div class="link">
@@ -435,7 +435,7 @@
           </section>
           <section class="elements-footer">
             <div class="footer-title">
-              <h3 class="section-title">Nos hébergements</h3>
+              <h3 class="title">Nos hébergements</h3>
             </div>
             <div class="footer-link">
               <div class="link">
@@ -446,7 +446,7 @@
           </section>
           <section class="elements-footer">
             <div class="footer-title">
-              <h3 class="section-title">Assistance</h3>
+              <h3 class="title">Assistance</h3>
             </div>
             <div class="footer-link">
               <div class="link">
