--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
 
   <body>
     <div class="main-container">
-      <header>
-        <div class="logo">
-          <img src="./images/logo/Booki.png" alt="logo Booki" />
-        </div>
+      <header class="heading">
+          <img class="logo" src="./images/logo/Booki.png" alt="logo Booki" />
         <nav class="menu">
-          <ul>
-            <li><a href="#Hebergements">Hébergements</a></li>
-            <li><a href="#Activites">Activités</a></li>
-          </ul>
+          <a class="item-menu" href="#Hebergements">Hébergements</a>
+          <a class="item-menu" href="#activites">Activités</a>
         </nav>
       </header>
       <main>
