Valadaition des fichier index.html et style.css avec W3C

--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Booki</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
+    >
+    <link rel="stylesheet" href="./css/style.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    >
   </head>
 
   <body>
     <div class="main-container">
       <header class="heading">
-          <img class="logo" src="./images/logo/Booki.png" alt="logo Booki" />
+          <img class="logo" src="./images/logo/Booki.png" alt="logo Booki" >
         <nav class="menu">
           <a class="item-menu" href="#Hebergements">Hébergements</a>
           <a class="item-menu" href="#activites">Activités</a>
@@ -46,7 +46,7 @@
                 type="search"
                 class="search-input"
                 placeholder="Marseille, France"
-              />
+              >
               <button type="submit" class="search-button">
                 <span class="button-text">Rechercher</span>
                 <i class="fas fa-search button-icon"></i>
@@ -101,7 +101,7 @@
                   <img
                     src="./images/hebergements/fred-kleber.jpg"
                     alt="Image de la chambre montrant deux lits"
-                  />
+                  >
                   <div class="carte-content">
                     <div class="carte-txt">
                       <h3 class="carte-title ">Hôtel du port</h3>
@@ -129,7 +129,7 @@
                   <img
                     src="./images/hebergements/febrian-zakaria.jpg"
                     alt="Image de la chambre montrant deux lits"
-                  />
+                  >
                   <div class="carte-content">
                     <div class="carte-txt">
                       <h3 class="carte-title">Hôtel Chez Amina</h3>
@@ -157,7 +157,7 @@
                   <img
                     src="./images/hebergements/reisetopia.jpg"
                     alt="Image de la chambre montrant un grand lit"
-                  />
+                  >
                   <div class="carte-content">
                     <div class="carte-txt">
                       <h3 class="carte-title ">Hôtels Les Mouettes </h3>
@@ -187,7 +187,7 @@
                   <img
                     src="./images/hebergements/annie-spratt.jpg"
                     alt="Image de la chambre montrant un grand lit"
-                  />
+                  >
                   <div class="carte-content">
                     <div class="carte-txt">
                       <h3 class="carte-title ">Hotel de la mer</h3>
@@ -215,7 +215,7 @@
                   <img
                     src="./images/hebergements/marcus-loke.jpg"
                     alt="Image de la chambre montrant un lit "
-                  />
+                  >
                   <div class="carte-content">
                     <div class="carte-txt">
                       <h3 class="carte-title ">Auberge la cannebière</h3>
@@ -243,7 +243,7 @@
                   <img
                     src="./images/hebergements/nicate-lee.jpg"
                     alt="Image de la chambre montrant deux lits"
-                  />
+                  >
                   <div class="carte-content">
                     <div class="carte-txt">
                       <h3 class="carte-title ">Auberge Le Panier</h3>
@@ -281,7 +281,7 @@
                   <img
                     src="./images/hebergements/emile-guillemot.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  >
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Le soleil du matin</h3>
@@ -306,7 +306,7 @@
                   <img
                     src="./images/hebergements/aw-creative.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  >
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
@@ -333,7 +333,7 @@
                   <img
                     src="./images/hebergements/febrian-zakaria2.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                  >
                   <div class="card-content">
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Bleu et Blanc</h3>
@@ -366,7 +366,7 @@
                 <img
                   src="./images/activites/reno-laithienne.jpg"
                   alt="image montrant le port de marseille"
-                />
+                >
                 <div class="photo-content">
                   <div class="photo-txt">
                     <h3 class="photo-title ">Vieux Port</h3>
@@ -379,7 +379,7 @@
                 <img
                   src="./images/activites/paul-hermann.jpg"
                   alt="image montrant une montagne de rocher"
-                />
+                >
                 <div class="photo-content">
                   <div class="photo-txt">
                     <h3 class="photo-title">Fort de Pomégues</h3>
@@ -392,7 +392,7 @@
                 <img
                   src="./images/activites/kilyan-sockalingum.jpg"
                   alt="image montrant la mer"
-                />
+                >
                 <div class="photo-content">
                   <div class="photo-txt">
                     <h3 class="photo-title">Parc national des calangues</h3>
@@ -405,7 +405,7 @@
                 <img
                   src="./images/activites/florian-wehde.jpg"
                   alt="image montrant une cathedrale"
-                />
+                >
                 <div class="photo-content">
                   <div class="photo-txt">
                     <h3 class="photo-title">Notre Dame-de-la-Garde</h3>
@@ -414,6 +414,7 @@
               </article>
             </a>
           </div>
+        </div>
       </main>
       <footer>
         <div class="container-footer">
