Activation des lienshégergements et activités

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <header class="heading">
           <img class="logo" src="./images/logo/Booki.png" alt="logo Booki" >
         <nav class="menu">
-          <a class="item-menu" href="#Hebergements">Hébergements</a>
+          <a class="item-menu" href="#hebergements">Hébergements</a>
           <a class="item-menu" href="#activites">Activités</a>
         </nav>
       </header>
       <main>
-        <section class="container">
+        <section id="hebergements" class="container">
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
           <p>En plein centre ville ou en pleine nature</p>
           <div class="search-container">
@@ -356,7 +356,7 @@
             </div>
           </section>
         </div>
-        <div class="activites-à-marseille">
+        <div id="activites" class="activites-à-marseille">
           <div class="activites">
             <h2 class="activites-title">Activités à Marseille</h2>
           </div>
