--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 </div>
               </article>
             </a>
-            <a class="#">
+            <a href="#">
               <article class="photo">
                 <img
                   src="./images/activites/kilyan-sockalingum.jpg"
@@ -400,7 +400,7 @@
                 </div>
               </article>
             </a>
-            <a class="#">
+            <a href="#">
               <article class="photo">
                 <img
                   src="./images/activites/florian-wehde.jpg"
