--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
             </div>
           </section>
         </div>
+      <article>
         <div id="activites" class="activites-à-marseille">
           <div class="activites">
             <h2 class="activites-title">Activités à Marseille</h2>
@@ -415,10 +416,11 @@
             </a>
           </div>
         </div>
+      </article>  
       </main>
       <footer>
         <div class="container-footer">
-          <section class="elements-footer">
+          <div class="elements-footer">
             <div class="footer-title">
               <h3 class="title">A propos</h3>
             </div>
@@ -429,8 +431,8 @@
                 <a href="#" class="link">Données et confidentialités</a>
               </div>
             </div>
-          </section>
-          <section class="elements-footer">
+          </div>
+          <div class="elements-footer">
             <div class="footer-title">
               <h3 class="title">Nos hébergements</h3>
             </div>
@@ -440,8 +442,8 @@
                 <a href="#" class="link">Soumettre votre hôtel</a>
               </div>
             </div>
-          </section>
-          <section class="elements-footer">
+          </div>
+          <div class="elements-footer">
             <div class="footer-title">
               <h3 class="title">Assistance</h3>
             </div>
@@ -451,7 +453,7 @@
                 <a href="#" class="link">Nous contacter</a>
               </div>
             </div>
-          </section>
+          </div>
         </div>
       </footer>
     </div>
