--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
       </header>
       <main>
-        <section id="hebergements" class="container">
+        <section  class="container">
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
           <p>En plein centre ville ou en pleine nature</p>
           <div class="search-container">
@@ -90,7 +90,7 @@
           </div>
         </section>
 
-        <div class="hebergements-and-populaires">
+        <div id="hebergements" class="hebergements-and-populaires">
           <section class="hebergements">
             <div class="hebergements-title">
               <h2 class="section-title">Hébergements à Marseille</h2>
@@ -356,67 +356,67 @@
             </div>
           </section>
         </div>
-      <article>
-        <div id="activites" class="activites-à-marseille">
-          <div class="activites">
-            <h2 class="activites-title">Activités à Marseille</h2>
+        <article>
+          <div id="activites" class="activites-à-marseille">
+            <div class="activites">
+              <h2 class="activites-title">Activités à Marseille</h2>
+            </div>
+            <div class="activites-photos">
+              <a href="#">
+                <article class="photo">
+                  <img
+                    src="./images/activites/reno-laithienne.jpg"
+                    alt="image montrant le port de marseille"
+                  >
+                  <div class="photo-content">
+                    <div class="photo-txt">
+                      <h3 class="photo-title ">Vieux Port</h3>
+                    </div>
+                  </div>
+                </article>
+              </a>
+              <a href="#">
+                <article class="photo">
+                  <img
+                    src="./images/activites/paul-hermann.jpg"
+                    alt="image montrant une montagne de rocher"
+                  >
+                  <div class="photo-content">
+                    <div class="photo-txt">
+                      <h3 class="photo-title">Fort de Pomégues</h3>
+                    </div>
+                  </div>
+                </article>
+              </a>
+              <a href="#">
+                <article class="photo">
+                  <img
+                    src="./images/activites/kilyan-sockalingum.jpg"
+                    alt="image montrant la mer"
+                  >
+                  <div class="photo-content">
+                    <div class="photo-txt">
+                      <h3 class="photo-title">Parc national des calangues</h3>
+                    </div>
+                  </div>
+                </article>
+              </a>
+              <a href="#">
+                <article class="photo">
+                  <img
+                    src="./images/activites/florian-wehde.jpg"
+                    alt="image montrant une cathedrale"
+                  >
+                  <div class="photo-content">
+                    <div class="photo-txt">
+                      <h3 class="photo-title">Notre Dame-de-la-Garde</h3>
+                    </div>
+                  </div>
+                </article>
+              </a>
+            </div>
           </div>
-          <div class="activites-photos">
-            <a href="#">
-              <article class="photo">
-                <img
-                  src="./images/activites/reno-laithienne.jpg"
-                  alt="image montrant le port de marseille"
-                >
-                <div class="photo-content">
-                  <div class="photo-txt">
-                    <h3 class="photo-title ">Vieux Port</h3>
-                  </div>
-                </div>
-              </article>
-            </a>
-            <a href="#">
-              <article class="photo">
-                <img
-                  src="./images/activites/paul-hermann.jpg"
-                  alt="image montrant une montagne de rocher"
-                >
-                <div class="photo-content">
-                  <div class="photo-txt">
-                    <h3 class="photo-title">Fort de Pomégues</h3>
-                  </div>
-                </div>
-              </article>
-            </a>
-            <a href="#">
-              <article class="photo">
-                <img
-                  src="./images/activites/kilyan-sockalingum.jpg"
-                  alt="image montrant la mer"
-                >
-                <div class="photo-content">
-                  <div class="photo-txt">
-                    <h3 class="photo-title">Parc national des calangues</h3>
-                  </div>
-                </div>
-              </article>
-            </a>
-            <a href="#">
-              <article class="photo">
-                <img
-                  src="./images/activites/florian-wehde.jpg"
-                  alt="image montrant une cathedrale"
-                >
-                <div class="photo-content">
-                  <div class="photo-txt">
-                    <h3 class="photo-title">Notre Dame-de-la-Garde</h3>
-                  </div>
-                </div>
-              </article>
-            </a>
-          </div>
-        </div>
-      </article>  
+        </article>
       </main>
       <footer>
         <div class="container-footer">
